Fixing the subtitle menu close button not being in alignment with the rest of the settings

--- a/shadow.css
+++ b/shadow.css
@@ -85,6 +85,7 @@ p {
 #settings-close {
     font-size: 30px;
     margin-top: 0px;
+    line-height: 1.3;
     cursor: pointer;
 }
 
